# producer-consumer

./: .gitignore  CMakeLists.txt  Test.cmake
conf/: pcConf
scripts/: build.sh
src/: Config.cpp  Config.h  Consumer.cpp  Consumer.h  FileInput.cpp  FileInput.h  Ipc.cpp  Ipc.h  Producer.cpp  Producer.h  Sentence.cpp  Sentence.h  SharedBuffer.cpp  SharedBuffer.h  SharedBufferReader.cpp  SharedBufferReader.h  SharedBufferWriter.cpp  SharedBufferWriter.h  pc.cpp  pc.h  producer.cpp
src/consumer/: consumer.cpp
src/pcchaos/: pcchaos.cpp
src/producer/: producer.cpp
test/: ConfigTests.cpp  ConfigTests.h  FileInputTests.cpp  FileInputTests.h  IpcTests.cpp  IpcTests.h  MockIpc.h  MockSentence.h  MockSharedBufferWriter.h  SentenceTests.cpp  SentenceTests.h  SharedBufferReaderTests.cpp  SharedBufferReaderTests.h  SharedBufferTests.cpp  SharedBufferTests.h  SharedBufferWriterTests.cpp  SharedBufferWriterTests.h  pcTests.cpp  pcTests.h
